test/src/e2e_vm_tests/test_programs/should_fail/too_many_abi_impl_methods/src/main.sw
contract;

abi MyContract {
}

impl MyContract for Contract {
    fn f() -> bool {
        true
    }
}
